--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "livereload": "^0.9.3",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
-    "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0"
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
